[project]
name = "ttlock-ble"
version = "0.1.7"
description = "Python SDK for controlling DLock-XP / TTLock smart locks over Bluetooth"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Rodrigo Roque", email = "rodrigogoncalvesroque@gmail.com" }]
keywords = ["ttlock", "smart-lock", "bluetooth", "ble", "sdk", "home-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]
dependencies = [
    "bleak>=2.1.0",
    "httpx>=0.27.0",
    "cryptography>=44.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "bleak-retry-connector>=4.4.0",
]

[project.scripts]
ttlock = "ttlock_ble.cli:app"

[project.urls]
Homepage = "https://github.com/roquerodrigo/ttlock-ble"
Repository = "https://github.com/roquerodrigo/ttlock-ble"
Issues = "https://github.com/roquerodrigo/ttlock-ble/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttlock_ble"]

[tool.hatch.build.targets.wheel.force-include]
"src/ttlock_ble/py.typed" = "ttlock_ble/py.typed"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pre-commit==4.6.0",
]
lint = [
    "ruff==0.15.14",
    "mypy==2.1.0",
]

[tool.uv]
default-groups = ["dev", "lint"]
